[package]
name = "jun-actix"
version = "0.1.0"
authors = ["James Simpson <edenofest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jun = { path = "../jun", package = "jun" }
actix-rt = "1.1.1"
actix-cors = "0.2.0"
actix-web = "2.0.0"
log = "0.4.8"
dotenv = "0.15.0"
env_logger = "0.7.1"
lazy_static = "1.4.0"
