[package]
name = "jun-tide"
version = "0.1.0"
authors = ["James Simpson <edenofest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jun = { path = "../jun", package = "jun" }
async-std = { version = "1.6.1", features = ["attributes"] }
tide = "0.11.0"
log = "0.4.8"
dotenv = "0.15.0"
lazy_static = "1.4.0"
