[package]
name = "june"
version = "0.1.0"
authors = ["James Simpson <edenofest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argonautica = "0.2.0"
async-std = { version = "1.6.1", features = ["attributes"] }
async-trait = "0.1.35"
chrono = { version = "0.4.11", features = ["serde"] }
juniper = { git = "https://github.com/graphql-rust/juniper", features = ["uuid"] }
serde = { version = "1.0", features = ["derive"] }
slog = "2.5.2"
sqlx = { version = "0.3.5", features = ["postgres", "chrono", "uuid"] }
thiserror = "1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
futures = { version = "0.3.5", features = ["compat"] }

